# socio_wave_predictive_models

./: .env.example  main.py  pyproject.toml  test.py
src/: collect.py
src/core/: config.py  database.py
src/models/: __init__.py  pydantic_models.py  sqlalchemy_models.py
src/predictive_models/: metrics.py  send_metrics.py  train.py
src/repositories/: repository.py
