[project]
name = "social-pulse-predictive-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.2.0",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "pydantic[email,timezone]>=2.13.4",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "icecream>=2.2.0",
]
